cmt 23 [26/06]
cambios en pedidos. arreglos en gral. datos para devolver precio calculado del producto y stock. falta redondear esto y hacer los cambios en productos que hablamos con pablo.